sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__multiple-aggregates.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          category,
          COUNT(*) as transaction_count,
          SUM(amount) as total_amount,
          AVG(amount) as avg_amount,
          SUM(quantity) as total_quantity,
          AVG(quantity) as avg_quantity
      FROM
          sales
      GROUP BY
          category
      ORDER BY
          total_amount DESC;
info:
  statement_type: SELECT
  tables:
  - sales
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN sales USING INDEX idx_sales_category
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode                  p1  p2  p3  p4                  p5  comment
   0          Init             0  61   0                       0  Start at 61
   1          SorterOpen       0   1   0  k(1,-Binary)         0  cursor=0
   2          Null             0  13  17                       0  r[13..17]=NULL
   3          Integer          0  10   0                       0  r[10]=0; clear group by abort flag
   4          Null             0  11   0                       0  r[11]=NULL; initialize group by comparison registers to NULL
   5          Gosub           24  49   0                       0  ; go to clear accumulator subroutine
   6          OpenRead         1   2   0  k(7,B,B,B,B,B,B,B)   0  table=sales, root=2, iDb=0
   7          OpenRead         2   4   0  k(2,B)               0  index=idx_sales_category, root=4, iDb=0
   8          Rewind           2  29   0                       0  Rewind index idx_sales_category
   9            DeferredSeek   2   1   0                       0
  10            Column         2   0  19                       0  r[19]=idx_sales_category.category
  11            Column         1   4  20                       0  r[20]=sales.amount
  12            ColumnRange    1   4  21  2                    0  r[21..22]=sales.amount..quantity
  13            Column         1   5  23                       0  r[23]=sales.quantity
  14            Compare       11  19   1  k(1, Binary)         0  r[11..11]==r[19..19]
  15            Jump          16  20  16                       0  ; start new group if comparison is not equal
  16            Gosub          8  33   0                       0  ; check if ended group had data, and output if so
  17            Move          19  11   1                       0  r[11..11]=r[19..19]
  18            IfPos         10  52   0                       0  r[10]>0 -> r[10]-=0, goto 52; check abort flag
  19            Gosub         24  49   0                       0  ; goto clear accumulator subroutine
  20            AggStep        0  25  13  count                0  accum=r[13] step(r[25])
  21            AggStep        0  20  14  sum                  0  accum=r[14] step(r[20])
  22            AggStep        0  21  15  avg                  0  accum=r[15] step(r[21])
  23            AggStep        0  22  16  sum                  0  accum=r[16] step(r[22])
  24            AggStep        0  23  17  avg                  0  accum=r[17] step(r[23])
  25            If             9  27   0                       0  if r[9] goto 27; don't emit group columns if continuing existing group
  26            Column         2   0  12                       0  r[12]=idx_sales_category.category
  27            Integer        1   9   0                       0  r[9]=1; indicate data in accumulator
  28          Next             2   9   0                       1
  29          Gosub            8  33   0                       0  ; emit row for final group
  30          Goto             0  52   0                       0  ; group by finished
  31          Integer          1  10   0                       0  r[10]=1
  32        Return             8   0   0                       0
  33        IfPos              9  35   0                       0  r[9]>0 -> r[9]-=0, goto 35; output group by row subroutine start
  34      Return               8   0   0                       0
  35      AggFinal             0  13   0  count                0  accum=r[13]
  36      AggFinal             0  14   0  sum                  0  accum=r[14]
  37      AggFinal             0  15   0  avg                  0  accum=r[15]
  38      AggFinal             0  16   0  sum                  0  accum=r[16]
  39      AggFinal             0  17   0  avg                  0  accum=r[17]
  40      Copy                14  26   0                       0  r[26]=r[14]
  41      Copy                12  27   0                       0  r[27]=r[12]
  42      Copy                13  28   0                       0  r[28]=r[13]
  43      Copy                15  29   0                       0  r[29]=r[15]
  44      Copy                16  30   0                       0  r[30]=r[16]
  45      Copy                17  31   0                       0  r[31]=r[17]
  46      MakeRecord          26   6   7                       0  r[7]=mkrec(r[26..31])
  47      SorterInsert         0   7   0  0                    0  key=r[7]
  48    Return                 8   0   0                       0
  49    Null                   0  12  17                       0  r[12..17]=NULL; clear accumulator subroutine start
  50    Integer                0   9   0                       0  r[9]=0
  51  Return                  24   0   0                       0
  52  OpenPseudo               3   7   6                       0  6 columns in r[7]
  53  SorterSort               0  60   0                       0
  54    SorterData             0   7   3                       0  r[7]=data
  55    ColumnRange            3   1   1  2                    0  r[1..2]=pseudo.column 1..column 2
  56    Column                 3   0   3                       0  r[3]=pseudo.column 0
  57    ColumnRange            3   3   4  3                    0  r[4..6]=pseudo.column 3..column 5
  58    ResultRow              1   6   0                       0  output=r[1..6]
  59  SorterNext               0  54   0                       0
  60  Halt                     0   0   0                       0
  61  Transaction              0   1   8                       0  iDb=0 tx_mode=Read
  62  Integer                  1  25   0                       0  r[25]=1
  63  Goto                     0   1   0                       0
