sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__nested-aggregation.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          AVG(category_total) as avg_category_sales,
          MAX(category_total) as max_category_sales,
          MIN(category_total) as min_category_sales
      FROM
          (
              SELECT
                  category,
                  SUM(amount) as category_total
              FROM
                  sales
              GROUP BY
                  category
          ) as category_totals;
info:
  statement_type: SELECT
  tables:
  - sales
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN category_totals
   `--SCAN sales USING INDEX idx_sales_category

BYTECODE
addr  opcode                  p1  p2  p3  p4                  p5  comment
   0          Init             0  56   0                       0  Start at 56
   1          InitCoroutine    1  38   2                       0
   2          Null             0   9   0                       0  r[9]=NULL
   3          Integer          0   6   0                       0  r[6]=0; clear group by abort flag
   4          Null             0   7   0                       0  r[7]=NULL; initialize group by comparison registers to NULL
   5          Gosub           13  34   0                       0  ; go to clear accumulator subroutine
   6          OpenRead         0   2   0  k(7,B,B,B,B,B,B,B)   0  table=sales, root=2, iDb=0
   7          OpenRead         1   4   0  k(2,B)               0  index=idx_sales_category, root=4, iDb=0
   8          Rewind           1  23   0                       0  Rewind index idx_sales_category
   9            DeferredSeek   1   0   0                       0
  10            Column         1   0  11                       0  r[11]=idx_sales_category.category
  11            Column         0   4  12                       0  r[12]=sales.amount
  12            Compare        7  11   1  k(1, Binary)         0  r[7..7]==r[11..11]
  13            Jump          14  18  14                       0  ; start new group if comparison is not equal
  14            Gosub          4  27   0                       0  ; check if ended group had data, and output if so
  15            Move          11   7   1                       0  r[7..7]=r[11..11]
  16            IfPos          6  37   0                       0  r[6]>0 -> r[6]-=0, goto 37; check abort flag
  17            Gosub         13  34   0                       0  ; goto clear accumulator subroutine
  18            AggStep        0  12   9  sum                  0  accum=r[9] step(r[12])
  19            If             5  21   0                       0  if r[5] goto 21; don't emit group columns if continuing existing group
  20            Column         1   0   8                       0  r[8]=idx_sales_category.category
  21            Integer        1   5   0                       0  r[5]=1; indicate data in accumulator
  22          Next             1   9   0                       1
  23          Gosub            4  27   0                       0  ; emit row for final group
  24          Goto             0  37   0                       0  ; group by finished
  25          Integer          1   6   0                       0  r[6]=1
  26        Return             4   0   0                       0
  27        IfPos              5  29   0                       0  r[5]>0 -> r[5]-=0, goto 29; output group by row subroutine start
  28      Return               4   0   0                       0
  29      AggFinal             0   9   0  sum                  0  accum=r[9]
  30      Copy                 8   2   0                       0  r[2]=r[8]
  31      Copy                 9   3   0                       0  r[3]=r[9]
  32      Yield                1   0   0                       0
  33    Return                 4   0   0                       0
  34    Null                   0   8   9                       0  r[8..9]=NULL; clear accumulator subroutine start
  35    Integer                0   5   0                       0  r[5]=0
  36  Return                  13   0   0                       0
  37  EndCoroutine             1   0   0                       0
  38  Null                     0  17  19                       0  r[17..19]=NULL
  39  InitCoroutine            1   0   2                       0
  40    Yield                  1  48   0                       0
  41    Copy                   3  20   0                       0  r[20]=r[3]
  42    AggStep                0  20  17  avg                  0  accum=r[17] step(r[20])
  43    Copy                   3  21   0                       0  r[21]=r[3]
  44    AggStep                0  21  18  max(Binary)          0  accum=r[18] step(r[21])
  45    Copy                   3  22   0                       0  r[22]=r[3]
  46    AggStep                0  22  19  min(Binary)          0  accum=r[19] step(r[22])
  47  Goto                     0  40   0                       0
  48  AggFinal                 0  17   0  avg                  0  accum=r[17]
  49  AggFinal                 0  18   0  max                  0  accum=r[18]
  50  AggFinal                 0  19   0  min                  0  accum=r[19]
  51  Copy                    17  14   0                       0  r[14]=r[17]
  52  Copy                    18  15   0                       0  r[15]=r[18]
  53  Copy                    19  16   0                       0  r[16]=r[19]
  54  ResultRow               14   3   0                       0  output=r[14..16]
  55  Halt                     0   0   0                       0
  56  Transaction              0   1   8                       0  iDb=0 tx_mode=Read
  57  Goto                     0   1   0                       0
