sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__partial-index-count-star.snap
---
source: aggregation.sqltest
expression: SELECT count(*) FROM t2 WHERE marker IS NULL;
info:
  statement_type: SELECT
  tables:
  - t2
  setup_blocks:
  - partial_index_count_table
  database: ':memory:'
---
QUERY PLAN
`--SCAN t2 USING COVERING INDEX t2_partial_aux_idx

BYTECODE
addr  opcode       p1  p2  p3  p4      p5  comment
   0  Init          0  10   0           0  Start at 10
   1  Null          0   2   0           0  r[2]=NULL
   2  OpenRead      0   4   0  k(2,B)   0  index=t2_partial_aux_idx, root=4, iDb=0
   3  Rewind        0   6   0           0  Rewind index t2_partial_aux_idx
   4    AggStep     0   3   2  count    0  accum=r[2] step(r[3])
   5  Next          0   4   0           0
   6  AggFinal      0   2   0  count    0  accum=r[2]
   7  Copy          2   1   0           0  r[1]=r[2]
   8  ResultRow     1   1   0           0  output=r[1]
   9  Halt          0   0   0           0
  10  Transaction   0   1   3           0  iDb=0 tx_mode=Read
  11  Integer       1   3   0           0  r[3]=1
  12  Goto          0   1   0           0
