sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__simple-count-narrowest-index.snap
---
source: aggregation.sqltest
expression: SELECT count(*) FROM indexed_count;
info:
  statement_type: SELECT
  tables:
  - indexed_count
  setup_blocks:
  - indexed_count_table
  database: ':memory:'
---
QUERY PLAN
`--SCAN indexed_count USING COVERING INDEX indexed_count_narrow_idx

BYTECODE
addr  opcode       p1  p2  p3  p4      p5  comment
   0  Init          0   8   0           0  Start at 8
   1  Null          0   2   0           0  r[2]=NULL
   2  OpenRead      0   4   0  k(2,B)   0  index=indexed_count_narrow_idx, root=4, iDb=0
   3  Count         0   3   0           0
   4  Close         0   0   0           0
   5  Copy          3   1   0           0  r[1]=r[3]
   6  ResultRow     1   1   0           0  output=r[1]
   7  Halt          0   0   0           0
   8  Transaction   0   1   4           0  iDb=0 tx_mode=Read
   9  Goto          0   1   0           0
