sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__simple-group-by-single-column.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          category,
          SUM(amount) as total_sales
      FROM
          sales
      GROUP BY
          category
      ORDER BY
          total_sales DESC;
info:
  statement_type: SELECT
  tables:
  - sales
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN sales USING INDEX idx_sales_category
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode                  p1  p2  p3  p4                  p5  comment
   0          Init             0  46   0                       0  Start at 46
   1          SorterOpen       0   1   0  k(1,-Binary)         0  cursor=0
   2          Null             0   9   0                       0  r[9]=NULL
   3          Integer          0   6   0                       0  r[6]=0; clear group by abort flag
   4          Null             0   7   0                       0  r[7]=NULL; initialize group by comparison registers to NULL
   5          Gosub           13  35   0                       0  ; go to clear accumulator subroutine
   6          OpenRead         1   2   0  k(7,B,B,B,B,B,B,B)   0  table=sales, root=2, iDb=0
   7          OpenRead         2   4   0  k(2,B)               0  index=idx_sales_category, root=4, iDb=0
   8          Rewind           2  23   0                       0  Rewind index idx_sales_category
   9            DeferredSeek   2   1   0                       0
  10            Column         2   0  11                       0  r[11]=idx_sales_category.category
  11            Column         1   4  12                       0  r[12]=sales.amount
  12            Compare        7  11   1  k(1, Binary)         0  r[7..7]==r[11..11]
  13            Jump          14  18  14                       0  ; start new group if comparison is not equal
  14            Gosub          4  27   0                       0  ; check if ended group had data, and output if so
  15            Move          11   7   1                       0  r[7..7]=r[11..11]
  16            IfPos          6  38   0                       0  r[6]>0 -> r[6]-=0, goto 38; check abort flag
  17            Gosub         13  35   0                       0  ; goto clear accumulator subroutine
  18            AggStep        0  12   9  sum                  0  accum=r[9] step(r[12])
  19            If             5  21   0                       0  if r[5] goto 21; don't emit group columns if continuing existing group
  20            Column         2   0   8                       0  r[8]=idx_sales_category.category
  21            Integer        1   5   0                       0  r[5]=1; indicate data in accumulator
  22          Next             2   9   0                       1
  23          Gosub            4  27   0                       0  ; emit row for final group
  24          Goto             0  38   0                       0  ; group by finished
  25          Integer          1   6   0                       0  r[6]=1
  26        Return             4   0   0                       0
  27        IfPos              5  29   0                       0  r[5]>0 -> r[5]-=0, goto 29; output group by row subroutine start
  28      Return               4   0   0                       0
  29      AggFinal             0   9   0  sum                  0  accum=r[9]
  30      Copy                 9  14   0                       0  r[14]=r[9]
  31      Copy                 8  15   0                       0  r[15]=r[8]
  32      MakeRecord          14   2   3                       0  r[3]=mkrec(r[14..15])
  33      SorterInsert         0   3   0  0                    0  key=r[3]
  34    Return                 4   0   0                       0
  35    Null                   0   8   9                       0  r[8..9]=NULL; clear accumulator subroutine start
  36    Integer                0   5   0                       0  r[5]=0
  37  Return                  13   0   0                       0
  38  OpenPseudo               3   3   2                       0  2 columns in r[3]
  39  SorterSort               0  45   0                       0
  40    SorterData             0   3   3                       0  r[3]=data
  41    Column                 3   1   1                       0  r[1]=pseudo.column 1
  42    Column                 3   0   2                       0  r[2]=pseudo.column 0
  43    ResultRow              1   2   0                       0  output=r[1..2]
  44  SorterNext               0  40   0                       0
  45  Halt                     0   0   0                       0
  46  Transaction              0   1   8                       0  iDb=0 tx_mode=Read
  47  Goto                     0   1   0                       0
